<resources>
    <string name="app_name">Group26</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="homeTitleText">FluentU\nLearning</string>
    <string name="activitiesSectionText">Activities</string>
    <string name="dailyTipsSectionText">Daily Tips</string>
    <string name="QuizButtonText">Quizzes</string>
    <string name="FlashCardButtonText">FlashCards</string>
    <string name="ProgressButtonText">Progress</string>
    <string name="ResourcesButtonText">Resources</string>
    <string name="dailyTipText">
        Immerse yourself in English media such as movies, TV shows, podcasts, and books.
        This not only exposes you to authentic language use but also helps improve your
        listening skills, pronunciation, and overall comprehension.
    </string>

    <string name="nameHint">Your Name</string>
    <string name="nameTextViewString">Name</string>
    <string name="emailTextViewString">Email</string>
    <string name="emailHint">Your Email</string>
    <string name="phoneTextViewString">Phone</string>
    <string name="phoneHint">Your Phone Number</string>
    <string name="maleTextView">Male</string>
    <string name="femaleTextView">Female</string>
    <string name="classTextViewString">Class</string>
    <string name="classHint">Enter your class, eg. 2015</string>
    <string name="majorTextViewString">Major</string>
    <string name="majorHint">Your Major</string>
    <string name="genderTextViewString">Gender</string>
    <string name="saveButtonString">Save</string>
    <string name="closeButtonString">Close</string>
    <string name="menuSettingString">Settings</string>
    <string name="PhotoTextViewString">Profile Photo:</string>
    <string name="changePhotoButtonString">CHANGE</string>
    <string name="aboutUsText">Learn more about our app and what we have to offer!</string>
    <string name="flashcardActivityLabel">FlashCards</string>
    <string name="progressActivityLabel">Progress</string>
    <string name="quizActivityLabel">Quiz</string>
    <string name="resourcesActivityLabel">Resources</string>
    <string name="resourcesString">
        Welcome to an innovative approach to mastering new languages.
        FluentU is not just an application; it\'s a revolution that puts the power of language
        learning directly into the pockets of eager students worldwide. With us, language barriers
        are transformed into bridges of communication. We\'re from Group 26, and we\'re excited to guide
        you through our solution.
    </string>
    <string name="aboutTitleString">About</string>
    <string name="github_link">Visit our GitHub page to learn more: <a href="https://github.com/dereklwh/FluentU">https://github.com/dereklwh/FluentU</a></string>
    <string name="etcTitleString">ETC</string>
    <string name="etcText">*DISCLAIMER* The app is under development not all have been implemented</string>
    <string name="resourceReturnBtn">return</string>
    <string name="resourcesTitleText">Resources</string>

    <!-- format quiz title -->
    <string name="quiz_title_beginner">Quiz - Beginner Level</string>
    <string name="quiz_title_intermediate">Quiz - Intermediate Level</string>
    <string name="quiz_title_advanced">Quiz - Advanced Level</string>
</resources>