<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profilePhotoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PhotoTextViewString"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="262dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    app:srcCompat="@android:drawable/btn_star_big_on" />

                <Button
                    android:id="@+id/ChangePhotoButton"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:text="@string/changePhotoButtonString" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nameTextViewString"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:hint="@string/nameHint"
                    android:autofillHints=""
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailTextViewString"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:hint="@string/emailHint"
                    android:autofillHints=""
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneTextViewString"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:hint="@string/phoneHint"
                    android:inputType="phone"
                    android:autofillHints="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genderTextViewString"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/maleButton"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/maleTextView" />

                    <RadioButton
                        android:id="@+id/femaleButton"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/femaleTextView" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/saveButtonString"
                    android:textColor="#00796B" />

                <Button
                    android:id="@+id/closeButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
		    android:text="Remove Photo"
		    <!--
                    android:text="@string/closeButtonString"
		    -->
                    android:textColor="#00796B" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>