<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/homeTitleText"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bookIcon"
            android:layout_width="157dp"
            android:layout_height="169dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_baseline_menu_book_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ActivitiesSectionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activitiesSectionText"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/quizButton"
                android:layout_width="86dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_quiz"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/quizButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/QuizButtonText"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/flashCardButton"
                android:layout_width="86dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_flashcard"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/flashCardButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FlashCardButtonText"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/progressButton"
                android:layout_width="86dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_progress"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/progresButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ProgressButtonText"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/resourcesButton"
                android:layout_width="86dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_resource"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/resourcesButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ResourcesButtonText"
                android:gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/DailyTipSectionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/dailyTipsSectionText"
            android:textColor="#000000"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="292dp"
            android:fillViewport="true">

            <TextView
                android:id="@+id/dailyTipText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/daily_tip_border"
                android:padding="7dp"
                android:text="@string/dailyTipText"
                android:textColor="#000000"
                android:textSize="25sp" />

        </ScrollView>

    </LinearLayout>

</LinearLayout>
